# PM-intel

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_START_HERE.md  CLAUDE.md  CODEX_START_HERE.md  Ctemptail.txt  FAST_ADVANCE.md  LOCAL_ONLY_SCOPE.md  MANIFEST.md  README.md  WINDOWS_START_HERE.md  WORKLOG.md  docker-compose.local.yml  pmfi.cmd  pmfi.ps1  pyproject.toml
.agent/: PLANS.md
.claude/: README.md
.codex/: README.md  config.toml
agent_prompts/: 00_fresh_session.md  01_verification_pass.md  02_adversarial_review.md  03_fast_advance.md
claude_prompts/: 00_initial_claude_prompt.md  01_fast_advance_prompt.md
codex_prompts/: 00_initial_codex_prompt.md  01_periodic_verification_prompt.md  02_review_prompt.md  03_continuation_prompt.md  04_bugfix_prompt.md  05_architecture_reassessment_prompt.md  06_fast_advance_prompt.md
config/: alert_rules.yaml  app.example.yaml  logging.example.yaml  markets.example.yaml
docs/: AGENTIC_WORKFLOW.md  ARCHITECTURE.md  MANUAL_CROSS_VENUE_MATCHING.md  RELEASE_PROFILE_v1.md  REPO_INDEX.md  SECURITY.md  TESTING.md
experiments/: 01_feed_validation.md  02_baseline_backtest.md  03_cross_venue_matching.md
plans/: 2026-06-03-bottom-up-implementation-plan.md  HANDOFF_TEMPLATE.md  PRODGRADE_ULTRAGOAL.md
reports/: 2026-06-06-fixture-report.txt
scripts/: agent_context_check.py  autostart.py  autostart_smoke.py  baseline_smoke.py  clean.py  clean_checkout_smoke.py  consistency_audit.py  db_local.py  db_smoke.py  dq1_capture_gauntlet.py  dq2_semantics_matrix.py  dq3_operator_drill.py  handoff.py  lifecycle_smoke.py  (+8 more)
(+383 files in other folders)
